kubernetes/core/netbootxyz/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbootxyz
  annotations:
    argocd.argoproj.io/sync-wave: "120"
    metallb.universe.tf/allow-shared-ip: "gitea-netbootxyz"
    metallb.universe.tf/loadBalancerIPs: 192.168.69.38
spec:
  type: LoadBalancer
  ports:
    - name: tftp
      port: 69
      protocol: UDP
    - name: http
      port: 80
      protocol: TCP
  selector:
    app: netbootxyz
